[package]
name = "table_grow_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {git = "https://github.com/emilk/egui.git"}
egui_extras = {git = "https://github.com/emilk/egui.git"}
# eframe = "0.19.0"
# egui_extras = "0.19.0"